// This entire file is license key functionality
syntax = "proto3";

import "proto/reports.proto";

package Agent;

service Reporter {
    rpc AddStats(ReporterStats) returns (ReporterResponse) {}
    rpc AddTrace(ReporterTrace) returns (ReporterResponse) {}
}

message ReporterResponse {
    string message = 1;
}

message ReporterGraph {
    string reference = 1;
    string key = 2;
}

message ReporterStats {
    ReporterGraph graph = 1;
    string key = 2;
    Report.ContextualizedStats stats = 3;
    map<string, Report.ReferencedFieldsForType> fields = 4;
    // Total number of operations processed during this period.
    uint64 operation_count = 5;
}

message ReporterTrace {
    ReporterGraph graph = 1;
    string key = 2;
    Report.Trace trace = 3;
    map<string, Report.ReferencedFieldsForType> fields = 4;
}
